Update UI Chatbot with sidebar history and toggle themes

--- a/public/index.html
+++ b/public/index.html
@@ -11,54 +11,102 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/11.0.0/marked.min.js"></script>
 </head>
 <body>
-  <div class="container">
-    <div class="chat-header">
-      <div class="header-content">
-        <div class="avatar">
-          🤖
+  <div class="app-container">
+    <!-- Sidebar -->
+    <aside class="sidebar" id="sidebar">
+      <div class="sidebar-header">
+        <button class="new-chat-btn" id="new-chat-btn">
+          <i class="fas fa-plus"></i>
+          <span>Chat Baru</span>
+        </button>
+      </div>
+
+      <div class="sidebar-content">
+        <div class="history-section">
+          <h3 class="history-title">Riwayat Chat</h3>
+          <div class="chat-history" id="chat-history">
+            <!-- Chat history items will be added here -->
+          </div>
         </div>
-        <div class="header-info">
-          <h1>AI-ku</h1>
-          <p class="status">Online</p>
+      </div>
+
+      <div class="sidebar-footer">
+        <div class="user-info">
+          <div class="user-avatar">
+            <i class="fas fa-user"></i>
+          </div>
+          <div class="user-details">
+            <div class="user-name">User</div>
+            <div class="user-status">Online</div>
+          </div>
         </div>
       </div>
-    </div>
+    </aside>
 
-    <div id="chat-box" class="chat-box">
-      <div class="welcome-message">
-        <i class="fas fa-comments"></i>
-        <h2>Selamat Datang di AI-ku</h2>
-        <p>Tanya apa saja! Kamu juga bisa kirim gambar dan file lho.</p>
+    <!-- Main Chat Container -->
+    <div class="main-container">
+      <!-- Chat Header -->
+      <div class="chat-header">
+        <button class="menu-toggle" id="menu-toggle">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="header-content">
+          <div class="avatar">
+            🤖
+          </div>
+          <div class="header-info">
+            <h1>AI-ku</h1>
+            <p class="status">Siap menjawab semua pertanyaanmu ✨</p>
+          </div>
+        </div>
+        <div class="header-actions">
+          <!-- Theme Toggle -->
+          <div class="theme-toggle" id="theme-toggle" title="Toggle light/dark mode">
+            <i class="fas fa-sun"></i>
+            <i class="fas fa-moon"></i>
+          </div>
+          <button class="header-btn" id="clear-chat-btn" title="Clear current chat">
+            <i class="fas fa-trash-alt"></i>
+          </button>
+        </div>
       </div>
-    </div>
 
-    <div class="attachment-preview" id="attachment-preview"></div>
-
-    <form id="chat-form" class="chat-form">
-      <input type="file" id="file-input" accept="image/*,.pdf,.doc,.docx,.txt" style="display: none;" multiple />
-      
-      <button type="button" class="attach-btn" id="attach-btn" title="Lampirkan gambar atau file (maks 5 file, 10MB per file)">
-        <i class="fas fa-paperclip"></i>
-        <span class="file-count" id="file-count" style="display: none;">0</span>
-      </button>
-
-      <div class="input-wrapper">
-        <input type="text" id="user-input" placeholder="Ketik pesan..." autocomplete="off" />
+      <!-- Chat Box -->
+      <div id="chat-box" class="chat-box">
+        <div class="welcome-message">
+          <i class="fas fa-comments"></i>
+          <h2>Komdigi blokir ChatGPT ???</h2>
+          <p>Oke gpp, kita buat ChatGPT versi kita sendiri ya.</p>
+          <p>Tanya apa saja! Sini aku jawab, curhat juga boleh.</p>
+        </div>
       </div>
 
-      <button type="submit" class="send-btn" id="send-btn" title="Kirim pesan">
-        <i class="fas fa-paper-plane"></i>
-      </button>
-    </form>
+      <div class="attachment-preview" id="attachment-preview"></div>
 
-    <!-- Footer -->
-    <div class="chat-footer">
-      <p>
-        <i class="fas fa-heart" style="color: #ec4899;"></i> 
-        Dibuat dengan cinta | 
-        <i class="fas fa-robot"></i> Powered by Gemini AI | 
-        <span id="current-year">2025</span>
-      </p>
+      <form id="chat-form" class="chat-form">
+        <input type="file" id="file-input" accept="image/*,.pdf,.doc,.docx,.txt" style="display: none;" multiple />
+        
+        <button type="button" class="attach-btn" id="attach-btn" title="Lampirkan gambar atau file (maks 5 file, 10MB per file)">
+          <i class="fas fa-paperclip"></i>
+          <span class="file-count" id="file-count" style="display: none;">0</span>
+        </button>
+
+        <div class="input-wrapper">
+          <input type="text" id="user-input" placeholder="Ketik pesan..." autocomplete="off" />
+        </div>
+
+        <button type="submit" class="send-btn" id="send-btn" title="Kirim pesan">
+          <i class="fas fa-paper-plane"></i>
+        </button>
+      </form>
+
+      <!-- Footer -->
+      <div class="chat-footer">
+        <p>
+          <i class="fas fa-copyright"></i> 
+          <span id="current-year">2025</span> Maulidyah Intan
+        </p>
+      </div>
     </div>
   </div>
 
@@ -66,6 +114,56 @@
   <div id="toast" class="toast">
     <i class="fas fa-check-circle"></i>
     <span id="toast-message">Copied!</span>
+  </div>
+
+  <!-- Delete Confirmation Modal -->
+  <div id="delete-modal" class="modal">
+    <div class="modal-overlay"></div>
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="modal-icon delete">
+          <i class="fas fa-trash-alt"></i>
+        </div>
+        <h3 class="modal-title">Hapus Chat</h3>
+      </div>
+      <div class="modal-body">
+        <p>Apakah Anda yakin ingin menghapus chat ini?</p>
+        <p class="modal-subtitle">Tindakan ini tidak dapat dibatalkan.</p>
+      </div>
+      <div class="modal-footer">
+        <button class="modal-btn cancel" id="cancel-delete-btn">
+          <i class="fas fa-times"></i> Batal
+        </button>
+        <button class="modal-btn confirm" id="confirm-delete-btn">
+          <i class="fas fa-trash"></i> Hapus
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Clear Chat Confirmation Modal -->
+  <div id="clear-modal" class="modal">
+    <div class="modal-overlay"></div>
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="modal-icon warning">
+          <i class="fas fa-exclamation-triangle"></i>
+        </div>
+        <h3 class="modal-title">Bersihkan Chat</h3>
+      </div>
+      <div class="modal-body">
+        <p>Apakah Anda yakin ingin menghapus semua pesan di chat ini?</p>
+        <p class="modal-subtitle">Tindakan ini tidak dapat dibatalkan.</p>
+      </div>
+      <div class="modal-footer">
+        <button class="modal-btn cancel" id="cancel-clear-btn">
+          <i class="fas fa-times"></i> Batal
+        </button>
+        <button class="modal-btn confirm" id="confirm-clear-btn">
+          <i class="fas fa-broom"></i> Bersihkan
+        </button>
+      </div>
+    </div>
   </div>
 
   <script src="script.js"></script>
